syntax="proto3";

package v1;

import "google/protobuf/any.proto";

service TokenService{
    rpc Generate(TokenRequest)returns (TokenResponse);
    rpc VerifyToken(TokenVerifyRequest) returns (TokenVerifyResponse);
    rpc RenewTokens(TokenRenewRequest) returns (TokenResponse);
    rpc AffectToken(TokenAffectRequest)returns (TokenAffectResponse);
}

message TokenAffectRequest{
    string token=1;
    TokenState desiredState=2;
}

message TokenAffectResponse{
    oneof affected{
    bool effectApplied=1;
    ServiceError error=2;
    }
}

enum TokenState{
    WATCH=0;
    LOGOUT=1;
    TRACEROUTE=2;
    FREEZE=3;
    UNFREEZE=4;
}

enum TokenStatus {
    INVALID = 0;
    AUTHORIZED = 1;
    RESTRICTED = 2;
    EXPIRED = 3;
  }

message TokenVerifyRequest{
    string token=1;
    string service=2;
}

message TokenVerifyResponse{
   
    TokenStatus status = 1;
}

message TokenRenewRequest{
    string refreshToken=1;
}

message TokenClaim{
    string key=1;
    google.protobuf.Any value=2;

}
message TokenRequest{
   repeated TokenClaim claims=1;
}

message TokenResponse{
    oneof response{
        TokenPair tokens=1;
        ServiceError error=2;
    }
}

message TokenPair{
    string authToken=1;
    string refreshToken=2;
}

message ServiceError{
    string error=1;
    int32 code =2;
}
